--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,9 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:4.13.2"
     annotationProcessor "com.github.bumptech.glide:compiler:4.13.2"
 
+    /* Other */
+    implementation "com.github.chrisbanes:PhotoView:2.3.0"
+
     /* Testing */
     testImplementation "junit:junit:4.13.2"
     androidTestImplementation "androidx.test.ext:junit:1.1.3"
