--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,6 +56,7 @@ dependencies {
     implementation "androidx.core:core-ktx:1.9.0"
     implementation "androidx.appcompat:appcompat:1.5.1"
     implementation "androidx.constraintlayout:constraintlayout:2.1.4"
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation "androidx.activity:activity-ktx:1.6.0"
     implementation "androidx.fragment:fragment-ktx:1.5.3"
     implementation "androidx.navigation:navigation-fragment-ktx:2.5.2"
@@ -80,6 +81,7 @@ dependencies {
 
     /* Other */
     implementation "com.github.chrisbanes:PhotoView:2.3.0"
+    implementation "com.github.kirich1409:viewbindingpropertydelegate-noreflection:1.5.6"
 
     /* Testing */
     testImplementation "junit:junit:4.13.2"
