--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Randoms">
+        android:theme="@style/Theme.Randoms"
+        android:usesCleartextTraffic="true">
         <activity
-            android:name=".presentation.facts.FactActivity"
+            android:name=".presentation.activities.RandomActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.jokes.JokeActivity"
+            android:name=".presentation.activities.PictureActivity"
             android:exported="false" />
         <activity
-            android:name=".presentation.pictures.PictureActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.MainActivity"
+            android:name=".presentation.activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
